--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
 <body>
     <header>
-        HEADER CONTENT
+        <img src="logo.webp" alt="Logo">
+        <nav>
+            <a href="#">Abaut</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Job</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
 
     <main>
