--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@
     </header>
 
     <main>
-        MAIN CONTENT
+        <div>
+            <h1>404 Lost in space</h1>
+            <p>You have reached the edge of the universe. The page you requested could not be found. Don't worry and return to the previous page.</p>
+            <div>
+                <a href="#">Go home</a>
+                <a href="#">Back</a>
+            </div>
+        </div>
+        <img src="astronautas.png" alt="Astronautas su telefonu rankoje">
     </main>
 
     <footer>
-        FOOTER CONTAIN
+        FOOTER CONTENT
     </footer>
 </body>
 
