--- a/index.html
+++ b/index.html
@@ -14,34 +14,41 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-    <header>
-        <img src="logo.webp" alt="Logo">
-        <nav>
-            <a href="#">Abaut</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Job</a>
-            <a href="#">Contact</a>
+    <header class="container">
+        <img class="logo" src="./img/logo.webp" alt="Logo">
+        <nav class="main_nav">
+            <a class="link" href="#">Abaut</a>
+            <a class="link" href="#">Portfolio</a>
+            <a class="link" href="#">Job</a>
+            <a class="link" href="#">Contact</a>
         </nav>
     </header>
 
-    <main>
-        <div>
-            <h1>404 Lost in space</h1>
-            <p>You have reached the edge of the universe. The page you requested could not be found. Don't worry and return to the previous page.</p>
-            <div>
-                <a href="#">Go home</a>
-                <a href="#">Back</a>
+    <main class="container">
+        <div class="left-column">
+            <h1 class="main-title"><span>404</span>Lost in space</h1>
+            <p class="description">You have reached the edge of the universe. The page you requested could not be found. Don't worry and return to the previous page.</p>
+            <div class="button-group">
+                <a class="button" href="#">Go home</a>
+                <a class="button" href="#">Back</a>
             </div>
         </div>
-        <img src="astronautas.png" alt="Astronautas su telefonu rankoje">
+        <img class="right-column" src="./img/astronautas.png" alt="Astronautas su telefonu rankoje">
     </main>
 
-    <footer>
-        FOOTER CONTENT
+    <footer class="container">
+        <div>
+            <a class="socials" href="#" target="_blank">FB</a>
+            <a class="socials" href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+            <a class="socials" href="#" target="_blank">IG</a>
+            <a class="socials" href="#" target="_blank">LN</a>
+        </div>
+        <p class="copyright" >&copy; 2023 All rights reserved</p>
     </footer>
 </body>
 
