--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/socials.css">
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
@@ -42,13 +45,13 @@
     </main>
 
     <footer class="container">
-        <div>
-            <a class="socials" href="#" target="_blank">FB</a>
-            <a class="socials" href="#" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-            <a class="socials" href="#" target="_blank">IG</a>
-            <a class="socials" href="#" target="_blank">LN</a>
+        <div class="socials">
+            <a class="social-link fa fa-facebook-square" href="#" target="_blank" title="Facebook"></a>
+            <a class="social-link fa fa-twitter" href="#" target="_blank" title="Facebook"></a>
+            <a class="social-link fa fa-instagram" href="#" target="_blank" title="Instagram"></a>
+            <a class="social-link fa fa-linkedin-square" href="#" target="_blank" title="Linkedin"></a>
         </div>
-        <p class="copyright" >&copy; 2023 All rights reserved</p>
+        <p class="copyright"> &copy; 2023 All rights reserved</p>
     </footer>
 </body>
 
